[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vtkbox"
version = "0.2.3"
authors = [{ name = "zjqtzzc", email = "zjqtzzc1995@gmail.com" }]
description = "一些个人常用的VTK函数"
readme = "README.md"  # 如果有 README 文件
requires-python = ">=3.10"
license = { text = "MIT License" }
dependencies = [
    "vtk",
    "urdf_parser_py",
    "numpy",
    "PyQt6",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/zjqtzzc/vtkbox"